# amaze-rs

./: .gitignore  ALGORITHMS.md  AMAZING.md  Cargo.toml  Justfile  LICENSE-MIT  README.md  Taskfile.dist.yaml
.github/workflows/: rust.yml
.kilo/plans/: 1776012384385-tidy-star.md  implementation-progress.md
amaze/: Cargo.toml
amaze-cli/: Cargo.toml
amaze-cli/src/: main.rs
amaze-gui/: Cargo.toml
amaze-gui/src/: main.rs
amaze/benches/: generation.rs  solvers.rs  stats.rs
amaze/src/: direction4.rs  direction6.rs  dungeon.rs  generators.rs  grid_coord_2d.rs  hex_coord.rs  lib.rs  maze_generator.rs  path.rs  recursive_backtracker4.rs  render_unicode.rs  renderers.rs  room4.rs  room4_list.rs  stats.rs  unicode_renderer.rs  visit_map_2d.rs  wall4_grid.rs  wall6_grid.rs
amaze/src/dungeon/: dungeon_grid.rs  dungeon_type.rs  dyn_dungeon_grid.rs  generators.rs  solvers.rs  tile_type.rs
amaze/src/generators/: aldous_broder6.rs  binary_tree4.rs  cell_selector.rs  eller4.rs  growing_tree4.rs  growing_tree6.rs  hunt_and_kill4.rs  kruskal4.rs  prim4.rs  recursive_backtracker4.rs  recursive_backtracker6.rs  sidewinder4.rs  wilson4.rs
amaze/src/generators/helpers/: union_find.rs
amaze/src/renderers/: pgm_renderer.rs  unicode_renderer.rs
amaze/src/representations/: adjacency_list.rs  edge_list.rs  hex_adjacency_list.rs  hex_edge_list.rs  mod.rs  passability_grid.rs  weighted_adjacency_list.rs  weighted_edge_list.rs  weighted_hex_adjacency_list.rs  weighted_hex_edge_list.rs
amaze/src/solvers/: astar.rs  bfs.rs  dead_end.rs  dfs.rs  mod.rs
amaze/src/storage/: binary_format.rs  file_io.rs  json_format.rs  mod.rs
amaze/tests/: dungeon_tests.rs  generator_regression_tests.rs  maze_generator_tests.rs  solver_suite_tests.rs
