[workspace]
resolver = "2"
members = ["amaze", "amaze-cli", "amaze-gui"]
default-members = ["amaze-cli", "amaze-gui"]

[workspace.dependencies]
# Internal dependencies
amaze = { path = "amaze" }
clap = "4.6.1"
criterion = "0.8"
eframe = "0.34.1"
egui = "0.34.1"

# Dev dependencies
indoc = "2.0.7"
petgraph = "0.8"

# Direct dependencies
rand = "^0.10.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
