[package]
name = "amaze-gui"
publish = false
version = "0.3.0"
edition = "2024"
rust-version = "1.92.0"

[features]
## Enables hexagonal maze generation in the GUI
default = ["generators-hex"]
## Enables all hexagonal grid maze generation algorithms via the amaze crate
generators-hex= ["amaze/generators-hex"]

[dependencies]
amaze.workspace = true
eframe.workspace = true
egui.workspace = true
rand.workspace = true
