[package]
name = "amaze"
description = "A maze generator"
keywords = ["maze", "maze-generator"]
categories = ["game-development", "simulation"]
authors = ["Markus Mayer <widemeadows@gmail.com>"]
homepage = "https://github.com/sunsided/amaze-rs"
repository = "https://github.com/sunsided/amaze-rs"
license = "EUPL-1.2 OR MIT OR Apache-2.0"
readme = "../README.md"
version = "0.3.0"
edition = "2024"
rust-version = "1.85.0"

[features]
default = ["renderers", "generators", "solvers", "representations"]

generators = [
    "generator-growing-tree",
    "generator-kruskal",
    "generator-eller",
    "generator-wilson",
    "generator-hunt-and-kill",
    "generator-sidewinder",
    "generator-binary-tree",
    "generator-prim",
]
generator-growing-tree = []
generator-kruskal = []
generator-eller = []
generator-wilson = []
generator-hunt-and-kill = []
generator-sidewinder = []
generator-binary-tree = []
generator-prim = []

generators-hex= [
    "generator-hex-recursive-backtracker",
    "generator-hex-growing-tree",
    "generator-hex-aldous-broder",
]
generator-hex-recursive-backtracker = []
generator-hex-growing-tree = []
generator-hex-aldous-broder = []

solvers = ["solver-bfs", "solver-dfs", "solver-astar", "solver-dead-end"]
solver-bfs = []
solver-dfs = []
solver-astar = []
solver-dead-end = []

renderers = ["unicode-renderer", "pgm-renderer"]
unicode-renderer = []
pgm-renderer = []
representations = []
hex-representations = ["representations"]
dungeon-representations = ["representations"]
binary-format = []
json-format = ["dep:serde_json", "dep:serde"]
file-io = ["binary-format", "json-format"]
petgraph = ["dep:petgraph", "representations"]
serde = ["dep:serde"]

[dependencies]
rand.workspace = true
serde = { workspace = true, optional = true }
petgraph = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
indoc.workspace = true
criterion.workspace = true

[[bench]]
name = "generation"
harness = false

[[bench]]
name = "solvers"
harness = false
required-features = ["solvers"]

[[bench]]
name = "stats"
harness = false
